syntax = "proto3";


package qu;

// The auth service definition.
service Auth {
  rpc registerAsync (User) returns (RegisterResponse) {}
  rpc authorizeAsync (Credentials) returns (Token) {}
}

message RegisterResponse {
}

enum Role {
  CLIENT = 0;
  ADMIN = 1;
}

// The request message containing the user's name.
message Credentials {
  string username = 1;
  string password = 2;
}

message User {
  string username = 1;
  string password = 2;
  Role role = 3;
  //other possible info (the later streets are closed the better the design)
}

message Token {
  string username = 1;
  Role role = 2;
}


